--- a/dashboard.html
+++ b/dashboard.html
@@ -14,7 +14,7 @@
         }
         
         h1 {
-            color: #2c3e50;
+            color: #3b536b;
             text-align: center;
             margin-bottom: 30px;
         }
